--- a/views/genres.hbs
+++ b/views/genres.hbs
@@ -43,8 +43,12 @@
             <td>{{this.genre_id}}</td>
             <td>{{this.genre_name}}</td>
             <td>
-                <button>Edit</button>
-                <button>Delete</button>
+                <fieldset class="modify">
+                <form id="delete-genre-form" method="POST" action="/delete-genre-form">
+                    <input type="hidden" name="genre-id" value="{{this.genre_id}}">
+                    <input type="submit" value="Delete">
+                </form>
+                </fieldset>
             </td>
         </tr>
         {{/each}}
