Changed <h1> to just say the name of the page instead of this is.

--- a/views/moods.hbs
+++ b/views/moods.hbs
@@ -1,4 +1,4 @@
-<h1>This is the Users page</h1>
+<h1>Users page</h1>
 <p>All registered Users of the site are listed below.</p>
 
 {{!-- The Data from our Database --}}
