--- a/views/movie_relationships.hbs
+++ b/views/movie_relationships.hbs
@@ -1,4 +1,4 @@
-<h1>This is the Movie Relationships page for {{this.movie}}</h1>
+<h1>Movie Relationships page for {{this.movie}}</h1>
 
 {{!-- The Data from our Database --}}
 
