--- a/views/actors.hbs
+++ b/views/actors.hbs
@@ -1,4 +1,4 @@
-<h1>This is the Actors page</h1>
+<h1>Actors page</h1>
 <p>All actors currently in the database are listed below.</p>
 
 {{!-- The Data from our Database --}}
