--- a/views/age_ratings.hbs
+++ b/views/age_ratings.hbs
@@ -1,4 +1,4 @@
-<h1>This is the Age Ratings page</h1>
+<h1>Age Ratings page</h1>
 <p>All Age Ratings currently in the database are listed below.</p>
 
 {{!-- The Data from our Database --}}
@@ -45,10 +45,10 @@
             <td>{{this.age_rating_description}}</td>
             <td>
                 <fieldset class="modify">
-                <form id="delete-age-rating-form" method="POST" action="/delete-age-rating-form">
-                    <input type="hidden" name="age-rating-id" value="{{this.age_rating_id}}">
-                    <input type="submit" value="Delete">
-                </form>
+                    <form id="delete-age-rating-form" method="POST" action="/delete-age-rating-form">
+                        <input type="hidden" name="age-rating-id" value="{{this.age_rating_id}}">
+                        <input type="submit" value="Delete">
+                    </form>
                 </fieldset>
             </td>
         </tr>
@@ -89,6 +89,25 @@
 
         <input type="submit">
     </fieldset>
-</form>
 
-<script src="./js/age_rating_update.js"></script>
+    {{!-- <br>
+
+    <h2>Edit Age Rating</h2>
+
+    <p>
+        Select a Age Rating to update from the drop down to change the description!
+    </p>
+
+    <form id="/agerating-edit-form" method="POST" action="/movie-relationships">
+        <label for="search-movie">Movie Title: </label>
+        <select name="search-movie" id="search-movie">
+            {{#each data}}
+            <option value="{{this.age_rating_id}}">{{this.age_rating_description}}</option>
+            {{/each}}
+        </select>
+
+        <input type="submit"> --}}
+
+    </form>
+
+    <script src="./js/age_rating_update.js"></script>
