--- a/views/genres.hbs
+++ b/views/genres.hbs
@@ -1,4 +1,4 @@
-<h1>This is the Genres page</h1>
+<h1>Genres page</h1>
 <p>All Genres currently in the database are listed below.</p>
 
 {{!-- The Data from our Database --}}
