--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -1,4 +1,4 @@
-<h1>This is the Movies page</h1>
+<h1>Movies page</h1>
 <p>All movies currently in the database are listed below.</p>
 <nav>
     <ul style="list-style-type: none">
@@ -46,14 +46,14 @@
             <td>{{this.age_rating_id}}</td>
             <td>
                 <fieldset class="modify">
-                <form id="edit-movie-form" method="POST" action="/edit-movie-form">
-                    <input type="hidden" name="movie" value="{{this.movie_id}}">
-                    <input type="submit" value="Edit">
-                </form>
-                <form>
-                    <input type="hidden" name = "movie" value="{{this.movie_id}}">
-                    <input type="button" value="Delete">
-                </form>
+                    <form id="edit-movie-form" method="POST" action="/edit-movie-form">
+                        <input type="hidden" name="movie" value="{{this.movie_id}}">
+                        <input type="submit" value="Edit">
+                    </form>
+                    <form>
+                        <input type="hidden" name="movie" value="{{this.movie_id}}">
+                        <input type="button" value="Delete">
+                    </form>
                 </fieldset>
             </td>
         </tr>
