--- a/views/moods.hbs
+++ b/views/moods.hbs
@@ -1,5 +1,5 @@
-<h1>Users page</h1>
-<p>All registered Users of the site are listed below.</p>
+<h1>Moods Page</h1>
+<p>All Moods currently in the database are listed below.</p>
 
 {{!-- The Data from our Database --}}
 <nav>
