fix age rating update bug

--- a/views/age_ratings.hbs
+++ b/views/age_ratings.hbs
@@ -79,7 +79,7 @@
         <select name="input-update-age-id" id="input-update-age-id">
             <option>Select an ID</option>
             {{#each data}}
-            <option value="{{this.id}}">{{this.age_rating_id}}</option>
+            <option value="{{this.age_rating_id}}">{{this.age_rating_id}}</option>
             {{/each}}
         </select>
 
